tests/error/defined_class.gw
// [contains] already declared
 class C{}
class C{}
